Enhance table styling to prevent overflow and improve text display with ellipsis

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1371,7 +1371,10 @@ h4.title-admin {
 .table {
   max-width: 10em;
   overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
+
 
 /*PAGINA ADMINMODIFICALISTA*/
 
